--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -22,4 +22,15 @@
  * SOFTWARE.
  */
 
-$em: 20px;
+// sizes
+$em: 18px;
+
+// fonts
+$sans-serif: 'ProximaNova', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$monospace: Menlo, Monaco, Consolas, 'Courier New', monospace;
+
+// colors
+$black: #222;
+$white: #fff;
+$gray: #ccc;
+$blue: #367ac3;
