--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -22,43 +22,55 @@
  * SOFTWARE.
  */
 
-module.exports = function (grunt) {
-  'use strict';
-  grunt.util.linefeed = '\n';
-  grunt.initConfig(
-    {
-      pkg: grunt.file.readJSON('package.json'),
-      sass: {
-        dev: {
-          options: {
-            style: 'expanded',
-            compass: true
-          },
-          files: {
-            'tacit-VERSION.css': 'scss/main.scss'
-          }
-        },
-        dist: {
-          options: {
-            style: 'compressed',
-            compass: true
-          },
-          files: {
-            'dist/<%= pkg.name %>-<%= pkg.version %>.min.css': 'scss/main.scss'
-          }
-        }
-      },
-      watch: {
-        sass: {
-          files: 'scss/{,*/}*.scss',
-          tasks: ['sass:dev']
-        }
-      }
-    }
-  );
-  require('load-grunt-tasks') (grunt, { scope: 'devDependencies' });
-  grunt.loadNpmTasks('grunt-contrib-sass');
-  grunt.registerTask('default', ['sass:dist']);
-  grunt.registerTask('dev', ['sass:dev','watch']);
+@import 'defs';
+
+input,
+textarea,
+select,
+button {
+  display: block;
+  padding: .55 * $em;
 }
 
+label {
+  display: block;
+  margin-bottom: .82 * $em;
+}
+
+input[type="submit"],
+input[type="reset"],
+button {
+  padding: .3625 * $em 1.3 * $em;
+  color: $white;
+  background: $blue;
+  text-align: center;
+  border-radius: .2 * $em;
+  cursor: pointer;
+  margin-bottom: $em;
+  &:hover {
+    color: darken($white, 25);
+    background: darken($blue, 15);
+  }
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="url"],
+input[type="phone"],
+input[type="tel"],
+input[type="number"],
+input[type="datetime"],
+input[type="date"],
+input[type="month"],
+input[type="color"],
+input[type="time"],
+input[type="search"],
+input[type="range"],
+input[type="file"],
+input[type="datetime-local"],
+textarea {
+  padding: .3 * $em .35 * $em;
+  border: 1px solid $gray;
+  margin-bottom: $em;
+}
