--- a/scss/_headers.scss
+++ b/scss/_headers.scss
@@ -22,43 +22,35 @@
  * SOFTWARE.
  */
 
-module.exports = function (grunt) {
-  'use strict';
-  grunt.util.linefeed = '\n';
-  grunt.initConfig(
-    {
-      pkg: grunt.file.readJSON('package.json'),
-      sass: {
-        dev: {
-          options: {
-            style: 'expanded',
-            compass: true
-          },
-          files: {
-            'tacit-VERSION.css': 'scss/main.scss'
-          }
-        },
-        dist: {
-          options: {
-            style: 'compressed',
-            compass: true
-          },
-          files: {
-            'dist/<%= pkg.name %>-<%= pkg.version %>.min.css': 'scss/main.scss'
-          }
-        }
-      },
-      watch: {
-        sass: {
-          files: 'scss/{,*/}*.scss',
-          tasks: ['sass:dev']
-        }
-      }
-    }
-  );
-  require('load-grunt-tasks') (grunt, { scope: 'devDependencies' });
-  grunt.loadNpmTasks('grunt-contrib-sass');
-  grunt.registerTask('default', ['sass:dist']);
-  grunt.registerTask('dev', ['sass:dev','watch']);
+@import 'defs';
+
+h1, h2, h3, h4, h5, h6 {
+  text-rendering: optimizeLegibility;
+  color: #000;
 }
 
+h1 {
+  margin-top: 2 * $em;
+  margin-bottom: $em;
+  font-size: 2 * $em;
+  font-weight: 600;
+}
+
+h2 {
+  margin-top: 1.5 * $em;
+  margin-bottom: $em;
+  font-size: 1.4 * $em;
+  font-weight: 500;
+}
+
+h3 {
+  margin-top: 1.2 * $em;
+  margin-bottom: $em;
+  font-size: $em;
+}
+
+h4,h5, h6 {
+  margin-top: 2 * $em;
+  margin-bottom: $em;
+  font-size: 2 * $em;
+}
