--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -31,6 +31,8 @@ $monospace: Menlo, Monaco, Consolas, 'Courier New', monospace;
 
 // colors
 $black: #222;
-$white: #fff;
-$gray: #ccc;
-$blue: #367ac3;
+$white: #FFF;
+$gray: #CCC;
+$blue: #367AC3;
+$red: #DB423C;
+$green: #3FA75F;
