#2 scss lint works

--- a/scss/_pre.scss
+++ b/scss/_pre.scss
@@ -60,7 +60,7 @@ kbd {
 
 code {
   background: darken($white, 80);
-  border: .1 * $em solid lighten($dark, 40);
+  border: .1 * $em solid lighten($black, 40);
 }
 
 var {
