--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -68,6 +68,7 @@ input[type="search"],
 input[type="range"],
 input[type="file"],
 input[type="datetime-local"],
+select,
 textarea {
   border: 1px solid $gray;
   margin-bottom: $em;
