Added: More sensible margins to mobile sizes

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,3 +1,11 @@
 @media (max-width: $screen-mobile-max-width) {
+    body {
+        padding: $em;
+    }
     
+    article {
+        border-radius: 0;
+        margin: -$em;
+        padding: $em;
+    }
 }
