--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -38,10 +38,15 @@
   }
   
   fieldset {
+    // The following line fixes fieldset overflow in webkit browsers.
+    // For further info see:
+    // http://stackoverflow.com/questions/17408815/fieldset-resizes-wrong-appears-to-have-unremovable-min-width-min-content/17863685#17863685
     min-width: 0;
   }
   
-  // Firefox bug fix
+  // The following lines fixes fieldset overflow bug in Firefox browser.
+  // For further info, see:
+  // http://stackoverflow.com/questions/17408815/fieldset-resizes-wrong-appears-to-have-unremovable-min-width-min-content/17863685#17863685
   @-moz-document url-prefix() {
     fieldset {
       display: table-cell;
