Added form control focus and main styles
Added a glow to form controls when given focus.
Made the colour customizable using a variable.

Also added support for the main element, giving it cross browser
compatibility.

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -94,3 +94,11 @@ input[type="checkbox"] {
   margin-right: .5 * $em;
   margin-top: .45 * $em;
 }
+
+select:focus,
+textarea:focus,
+input:focus {
+  border-color: $formElementFocusGlow;
+  outline: 0px none;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.09) inset, 0px 0px 8px $formElementFocusGlow;
+}
