Fixed failed tests

--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -37,7 +37,7 @@ $green: #3fa75f;
 
 
 // Form control focus colour
-$formElementFocusGlow: $blue;
+$form-element-focus-glow: $blue;
 
 // responsive
 $mobile-width: 767px;
