#26 HTML and BODY height/width 100%

--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -38,6 +38,12 @@
   vertical-align: baseline;
 }
 
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   background: darken($white, 4);
   color: lighten($black, 10);
