--- a/scss/_headers.scss
+++ b/scss/_headers.scss
@@ -29,32 +29,42 @@ h4,
 h5,
 h6 {
   color: $black;
+  margin-bottom: $em;
 }
 
 h1 {
   font-size: 2 * $em;
   font-weight: 500;
-  margin-bottom: $em;
   margin-top: 2 * $em;
 }
 
 h2 {
   font-size: 1.4 * $em;
   font-weight: 400;
-  margin-bottom: $em;
   margin-top: 1.5 * $em;
 }
 
 h3 {
-  font-size: $em;
-  margin-bottom: $em;
+  font-size: 1.2 * $em;
   margin-top: 1.2 * $em;
 }
 
-h4,
-h5,
+h4 {
+  font-size: $em;
+  margin-top: $em;
+}
+
+h5 {
+  font-size: 0.8 * $em;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: $em;
+}
+
 h6 {
-  font-size: 2 * $em;
-  margin-bottom: $em;
-  margin-top: 2 * $em;
+  font-size: 0.8 * $em;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: $em;
+  color: $gray;
 }
