--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -44,16 +44,17 @@
     min-width: 0;
   }
   
-  // The following lines fixes fieldset overflow bug in Firefox browser.
-  // For further info, see:
-  // http://stackoverflow.com/questions/17408815/fieldset-resizes-wrong-appears-to-have-unremovable-min-width-min-content/17863685#17863685
-  @-moz-document url-prefix() {
-    fieldset {
-      display: table-cell;
-    }
-  }
-  
   section {
     width: auto;
+  }
+  
+  fieldset,
+  x:-moz-any-link {
+    // The following lines fixes fieldset overflow bug in Firefox browser.
+    // For further info, see:
+    // http://stackoverflow.com/questions/17408815/fieldset-resizes-wrong-appears-to-have-unremovable-min-width-min-content/17863685#17863685
+    // Changed the original `@-moz-document url-prefix` code to simpler
+    // `-moz-any-link` hack so W3C CSS validator will pass it.
+    display: table-cell;
   }
 }
