Renamed 'headers' to 'headings' file to better match its contents.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,7 +24,7 @@
 @import 'tables';
 @import 'forms';
 @import 'pre';
-@import 'headers';
+@import 'headings';
 @import 'typography';
 @import 'grid';
 @import 'responsive';
