Enhanced `$sans-serif` and added `$serif` to _defs
Enhancing the sans-serif appearance by adding San Francisco font family (form OS X El Capitan &  iOS 9)

--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -24,7 +24,8 @@
 $em: 18px;
 
 // fonts
-$sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$sans-serif: 'SF UI Text', 'SF NS Text', 'Helvetica Neue', Helvetica, 'Segoe UI', Roboto, Arial, 'Open Sans', Ubuntu, sans-serif;
+$serif: 'Iowan Old Style', Georgia, 'Times New Roman', Times, serif;
 $monospace: Menlo, Monaco, Consolas, 'Courier New', monospace;
 
 // colors
