Add input styling for type="week"

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -82,6 +82,7 @@ input[type="number"],
 input[type="datetime"],
 input[type="date"],
 input[type="month"],
+input[type="week"],
 input[type="color"],
 input[type="time"],
 input[type="search"],
