--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -1,6 +1,6 @@
 // The MIT License (MIT)
 //
-// Copyright (c) 2015 Yegor Bugayenko
+// Copyright (c) 2015-2016 Yegor Bugayenko
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -36,7 +36,7 @@ thead th {
   border-bottom-width: .12 * $em;
   padding-bottom: .35 * $em;
 }
-  
+
 table {
   display: block;
   max-width: 100%;
