--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -25,12 +25,6 @@
   border-collapse: separate;
   border-spacing: 0;
   box-sizing: border-box;
-  font-family: $sans-serif;
-  font-size: $em;
-  font-stretch: normal;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 1.65 * $em;
   margin: 0;
   outline: 0;
   padding: 0;
@@ -40,6 +34,7 @@
 
 html,
 body {
+  @extend %sans-serif;
   height: 100%;
   width: 100%;
 }
