lint fixes, add placeholder test image

--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -34,7 +34,7 @@ $gray: #ccc;
 $blue: #367ac3;
 $red: #db423c;
 $green: #3fa75f;
-$yellow: #ffffcc;
+$yellow: #ffc;
 
 // responsive
 $mobile-width: 767px;
