--- a/scss/_headings.scss
+++ b/scss/_headings.scss
@@ -28,19 +28,19 @@ h3,
 h4,
 h5,
 h6 {
-  color: $black;
+  color: lighten($text, 20);
+  font-weight: bold;
   margin-bottom: $em;
+  text-shadow: 1px 1px 1px $white;
 }
 
 h1 {
   font-size: 2 * $em;
-  font-weight: 500;
   margin-top: 2 * $em;
 }
 
 h2 {
   font-size: 1.4 * $em;
-  font-weight: 400;
   margin-top: 1.5 * $em;
 }
 
@@ -56,7 +56,6 @@ h4 {
 
 h5 {
   font-size: .8 * $em;
-  font-weight: bold;
   margin-top: $em;
   text-transform: uppercase;
 }
@@ -64,7 +63,6 @@ h5 {
 h6 {
   color: $gray;
   font-size: .8 * $em;
-  font-weight: bold;
   margin-top: $em;
   text-transform: uppercase;
 }
