--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -27,14 +27,21 @@ $em: 18px;
 $sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $monospace: Menlo, Monaco, Consolas, 'Courier New', monospace;
 
-// colors
-$black: #000;
+// layout colors
+$text: #353535;
+$background: #f5f5f5;
+
+// colors to use in markup
 $white: #fff;
-$gray: #ccc;
-$blue: #367ac3;
-$red: #db423c;
-$green: #3fa75f;
+$gray: #c2c2c2;
+$blue: #329dcc;
+$red: #c9593f;
+$green: #388757;
 $yellow: #ffc;
+$black: #353535;
+
+// round borders
+$rounded: $em * .5;
 
 // responsive
 $mobile-width: 767px;
