--- a/scss/_defs.scss
+++ b/scss/_defs.scss
@@ -70,7 +70,7 @@ $mobile-width: 767px;
 
 @mixin paddings {
 
-  padding: .4 * $em 0.8 * $em;
+  padding: .4 * $em .8 * $em;
   height: $em + 1.8 * $em;
 
 }
